# expensif-ai

./: .gitignore  .mise.toml  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml  render.py  run.py
docs/: index.html  presentation.html
expensifai/: clustering.py  expense_report.py  image.py  render.py  vision.py
model/: clustering.py  expense_report.py  observation.py
parser/: image.py  vision.py
tests/: conftest.py  test_cord_v2.py
tests/deepeval/: test_integration.py
tests/expensifai/: test_clustering.py  test_integration.py  test_perf.py  test_vision.py
tests/images/: .gitignore
tests/model/: test_clustering.py
tests/parser/: test_vision.py
