[tool.poetry]
name = "expensifain"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.1"
pypdf = "^4.2.0"
langchain-community = "^0.2.1"
litellm = "^1.38.8"
pyobjc-framework-vision = "^10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
